EDU-7073: remove references to user account concepts that no longer e… (#381)
* EDU-7073: remove references to user account concepts that no longer exist

* EDU-7073: trivyignore updates

* EDU-7073: Update test, and field re-use

* EDU-7073: Fixed test name